--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,151 +1,153 @@
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-<div class="relative z-50 lg:hidden hidden" role="dialog" aria-modal="true">
-  <!--
-      Off-canvas menu backdrop, show/hide based on off-canvas menu state.
+<div
+  data-controller="common--sidebar-menu"
+  data-common--sidebar-menu-hidden-class="hidden"
+  data-common--sidebar-menu-backdrop-showing-class="opacity-100"
+  data-common--sidebar-menu-backdrop-hiding-class="opacity-0"
+  data-common--sidebar-menu-menu-showing-class="translate-x-0"
+  data-common--sidebar-menu-menu-hiding-class="-translate-x-full"
+>
+  <div class="relative z-50 lg:hidden" role="dialog" aria-modal="true">
 
-      Entering: "transition-opacity ease-linear duration-300"
-        From: "opacity-0"
-        To: "opacity-100"
-      Leaving: "transition-opacity ease-linear duration-300"
-        From: "opacity-100"
-        To: "opacity-0"
-    -->
-  <div class="fixed inset-0 bg-black/80" aria-hidden="true"></div>
-  <div class="fixed inset-0 flex">
-    <!--
-        Off-canvas menu, show/hide based on off-canvas menu state.
+    <!-- Backdrop -->
+    <div
+      class="hidden fixed inset-0 bg-black/80 opacity-0 transition-opacity ease-linear duration-300"
+      data-common--sidebar-menu-target="backdrop"
+    ></div>
 
-        Entering: "transition ease-in-out duration-300 transform"
-          From: "-translate-x-full"
-          To: "translate-x-0"
-        Leaving: "transition ease-in-out duration-300 transform"
-          From: "translate-x-0"
-          To: "-translate-x-full"
-      -->
-    <div class="relative mr-16 flex w-full max-w-xs flex-1">
-      <!--
-          Close button, show/hide based on off-canvas menu state.
-
-          Entering: "ease-in-out duration-300"
-            From: "opacity-0"
-            To: "opacity-100"
-          Leaving: "ease-in-out duration-300"
-            From: "opacity-100"
-            To: "opacity-0"
-        -->
-      <div class="absolute left-full top-0 flex w-16 justify-center pt-5">
-        <button type="button" class="-m-2.5 p-2.5">
-          <span class="sr-only">Close sidebar</span>
-          <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
-      <!-- Sidebar component, swap this element with another sidebar if you like -->
-      <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6 pb-2">
-        <div class="flex h-16 shrink-0 items-center">
-          <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+    <!-- Menu -->
+    <div
+      class="fixed inset-0 flex -translate-x-full transition-transform ease-in-out duration-300"
+      data-common--sidebar-menu-target="menu"
+      data-action="click->common--sidebar-menu#outsideMenuTap"
+    >
+      <div class="relative mr-16 flex w-full max-w-xs flex-1">
+        <div class="absolute left-full top-0 flex w-16 justify-center pt-5">
+          <button
+            type="button"
+            class="-m-2.5 p-2.5"
+            data-action="common--sidebar-menu#close"
+          >
+            <span class="sr-only">Close sidebar</span>
+            <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+            </svg>
+          </button>
         </div>
-        <nav class="flex flex-1 flex-col">
-          <ul role="list" class="flex flex-1 flex-col gap-y-7">
-            <li>
-              <ul role="list" class="-mx-2 space-y-1">
-                <% navigation_items.each do |item| %>
-                  <%= sidebar_link item[:name], item[:path], item[:icon] %>
-                <% end %>
-              </ul>
-            </li>
-            <li>
-              <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
-              <ul role="list" class="-mx-2 mt-2 space-y-1">
-                <li>
-                  <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
-                  <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                    <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">H</span>
-                    <span class="truncate">Heroicons</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                    <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">T</span>
-                    <span class="truncate">Tailwind Labs</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                    <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">W</span>
-                    <span class="truncate">Workcation</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
+
+        <!-- Sidebar content -->
+        <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6 pb-2">
+          <div class="flex h-16 shrink-0 items-center">
+            <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+          </div>
+          <nav class="flex flex-1 flex-col">
+            <ul role="list" class="flex flex-1 flex-col gap-y-7">
+              <li>
+                <ul role="list" class="-mx-2 space-y-1">
+                  <% navigation_items.each do |item| %>
+                    <%= sidebar_link item[:name], item[:path], item[:icon] %>
+                  <% end %>
+                </ul>
+              </li>
+              <li>
+                <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
+                <ul role="list" class="-mx-2 mt-2 space-y-1">
+                  <li>
+                    <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                      <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">H</span>
+                      <span class="truncate">Oficina</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                      <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">T</span>
+                      <span class="truncate">Ventas</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                      <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">W</span>
+                      <span class="truncate">Fábrica</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- Static sidebar for desktop -->
-<div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
-  <!-- Sidebar component, swap this element with another sidebar if you like -->
-  <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6">
-    <div class="flex h-16 shrink-0 items-center">
-      <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+
+  <!-- Static sidebar for desktop -->
+  <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
+    <!-- Sidebar component, swap this element with another sidebar if you like -->
+    <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6">
+      <div class="flex h-16 shrink-0 items-center">
+        <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+      </div>
+      <nav class="flex flex-1 flex-col">
+        <ul role="list" class="flex flex-1 flex-col gap-y-7">
+          <li>
+            <ul role="list" class="-mx-2 space-y-1">
+              <% navigation_items.each do |item| %>
+                <%= sidebar_link item[:name], item[:path], item[:icon] %>
+              <% end %>
+            </ul>
+          </li>
+          <li class="mt-auto">
+            <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
+            <ul role="list" class="-mx-2 mt-2 space-y-1">
+              <li>
+                <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                  <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">O</span>
+                  <span class="truncate">Oficina</span>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                  <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">V</span>
+                  <span class="truncate">Ventas</span>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                  <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">F</span>
+                  <span class="truncate">Fábrica</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="-mx-6">
+            <a href="#" class="flex items-center gap-x-4 px-6 py-3 text-sm font-semibold leading-6 text-white hover:bg-blue-700">
+              <img class="h-8 w-8 rounded-full bg-blue-700" src="https://api.dicebear.com/9.x/avataaars-neutral/svg?seed=yoo" alt="">
+              <span class="sr-only">Your profile</span>
+              <span aria-hidden="true">Damián Farina</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="flex flex-1 flex-col">
-      <ul role="list" class="flex flex-1 flex-col gap-y-7">
-        <li>
-          <ul role="list" class="-mx-2 space-y-1">
-            <% navigation_items.each do |item| %>
-              <%= sidebar_link item[:name], item[:path], item[:icon] %>
-            <% end %>
-          </ul>
-        </li>
-        <li class="mt-auto">
-          <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
-          <ul role="list" class="-mx-2 mt-2 space-y-1">
-            <li>
-              <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
-              <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">O</span>
-                <span class="truncate">Oficina</span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">V</span>
-                <span class="truncate">Ventas</span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
-                <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue text-[0.625rem] font-medium text-white">F</span>
-                <span class="truncate">Fábrica</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="-mx-6">
-          <a href="#" class="flex items-center gap-x-4 px-6 py-3 text-sm font-semibold leading-6 text-white hover:bg-blue-700">
-            <img class="h-8 w-8 rounded-full bg-blue-700" src="https://api.dicebear.com/9.x/avataaars-neutral/svg?seed=yoo" alt="">
-            <span class="sr-only">Your profile</span>
-            <span aria-hidden="true">Damián Farina</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
   </div>
-</div>
-<div class="sticky top-0 z-40 flex items-center gap-x-6 bg-blue-700 px-4 py-4 shadow-sm sm:px-6 lg:hidden">
-  <button type="button" class="-m-2.5 p-2.5 text-lightBlue lg:hidden">
-    <span class="sr-only">Open sidebar</span>
-    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-    </svg>
-  </button>
-  <div class="flex-1 text-sm font-semibold leading-6 text-white">Dashboard</div>
-  <a href="#">
-    <span class="sr-only">Your profile</span>
-    <img class="h-8 w-8 rounded-full bg-blue-700" src="https://api.dicebear.com/9.x/avataaars-neutral/svg?seed=yoo" alt="">
-  </a>
+
+  <!-- Mobile Header -->
+  <div class="sticky top-0 z-40 flex items-center gap-x-6 bg-blue-700 px-4 py-4 shadow-sm sm:px-6 lg:hidden">
+    <button
+      type="button"
+      class="-m-2.5 p-2.5 text-lightBlue"
+      data-action="common--sidebar-menu#open"
+    >
+      <span class="sr-only">Open sidebar</span>
+      <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+    </button>
+    <div class="flex-1 text-sm font-semibold leading-6 text-white">Dashboard</div>
+    <a href="#">
+      <span class="sr-only">Your profile</span>
+      <img class="h-8 w-8 rounded-full bg-blue-700" src="https://api.dicebear.com/9.x/avataaars-neutral/svg?seed=yoo" alt="">
+    </a>
+  </div>
 </div>
